--- a/QSweeper/Source/Source.vcxproj.filters
+++ b/QSweeper/Source/Source.vcxproj.filters
@@ -252,5 +252,11 @@
     <ClCompile Include="Minesweeper.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Mine.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Grid.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
